--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,9 +5,9 @@ junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 appcompat = "1.7.0"
 material = "1.12.0"
-activity = "1.10.0"
-constraintlayout = "2.2.0"
-playServicesAds = "24.0.0"
+activity = "1.10.1"
+constraintlayout = "2.2.1"
+playServicesAds = "24.1.0"
 firebaseInappmessaging = "21.0.1"
 
 [libraries]
@@ -19,7 +19,7 @@ material = { group = "com.google.android.material", name = "material", version.r
 activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 play-services-ads = { group = "com.google.android.gms", name = "play-services-ads", version.ref = "playServicesAds" }
-firebase-inappmessaging = { group = "com.google.firebase", name = "firebase-inappmessaging", version.ref = "firebaseInappmessaging" }
+firebase-inappmessaging = { group = "com.google.firebase", name = "firebase-inappmessaging", version = "21.0.2" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
